--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsnd src/server.ts",
+    "dev": "tsnd --exit-child src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "prisma": "^4.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
